# dydux

./: .gitignore  .ocamlinit  Makefile  README.md  SPEC.md  data.dux  dune-project  dydux.opam  expr.ml
lib/: dune  engine.ml  expr.ml  printer.ml  printer.mli  reverse.txt  types.ml  types.mli
test/: arithmetic.dux  dune  test_dydux.ml
