(lang dune 3.17)

(name dydux)

(generate_opam_files true)

(source
 (github MustafaAamir/dydux))

(authors "Mustafa Aamir <mustafa.290101@gmail.com>", "Yusuf Sabuwalla <yusuff.0279@gmailcom>")

(maintainers "Mustafa Aamir <mustafa.290101@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name dydux)
 (synopsis "A mathematical inference engine")
 (description "an inference engine to reduce a subset of mathematical expressoins")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
